fixing routes for gh-pages

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/tryingAngularJS/">Home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/#!/welcome">Welcome</a>
+          <a class="nav-link" href="tryingAngularJS/#!/welcome">Welcome</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/#!/first">First</a>
+          <a class="nav-link" href="tryingAngularJS/#!/first">First</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/#!/second">Second</a>
+          <a class="nav-link" href="tryingAngularJS/#!/second">Second</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/#!/contacts/index">Contacts</a>
+          <a class="nav-link" href="tryingAngularJS/#!/contacts/index">Contacts</a>
         </li>
       </ul>
     </div>
