--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
           <a class="nav-link" href="/tryingAngularJS/">Home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="tryingAngularJS/#!/welcome">Welcome</a>
+          <a class="nav-link" href="/tryingAngularJS/#!/welcome">Welcome</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="tryingAngularJS/#!/first">First</a>
+          <a class="nav-link" href="/tryingAngularJS/#!/first">First</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="tryingAngularJS/#!/second">Second</a>
+          <a class="nav-link" href="/tryingAngularJS/#!/second">Second</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="tryingAngularJS/#!/contacts/index">Contacts</a>
+          <a class="nav-link" href="/tryingAngularJS/#!/contacts/index">Contacts</a>
         </li>
       </ul>
     </div>
