building my first directive

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <!-- AngularJS Controollers-->
   <script type="text/javascript" src='controllers/contactsCtrl.js'></script>
   <script type="text/javascript" src='controllers/paramsCtrl.js'></script>
+  <script type="text/javascript" src='controllers/appCtrl.js'></script>
   
   <!-- AngularJS Services-->
   <script type="text/javascript" src='services/app_service.js'></script>
+  <script type="text/javascript" src='services/name_service.js'></script>
   <!-- Style -->
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 
